--- a/WISLEY/Views/Masters/group.Master
+++ b/WISLEY/Views/Masters/group.Master
@@ -11,7 +11,7 @@
             string grpId = getGroupDetails().id.ToString();
     %>
 
-    <div class="card card-body rounded-top mb-3 pt-2">
+    <div class="card card-body border-primary z-depth-0 rounded-top mb-3 pt-2">
         <% if (user().userType == "Teacher")
             { %>
         <div class="row justify-content-end mt-0">
