--- a/WISLEY/Public/css/style.css
+++ b/WISLEY/Public/css/style.css
@@ -329,159 +329,37 @@
 }
 
 
-
-.scrollbar {
-    margin-left: 30px;
-    float: left;
-    height: 300px;
-    width: 65px;
-    background: #fff;
-    overflow-y: scroll;
-    margin-bottom: 25px;
+.z-depth-0 {
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important
 }
 
-.force-overflow {
-    min-height: 450px;
+.z-depth-1 {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(175, 175, 194, 0.16), 0 2px 10px 0 rgba(175, 175, 194, 0.12) !important;
+    box-shadow: 0 2px 5px 0 rgba(175, 175, 194, 0.16), 0 2px 10px 0 rgba(175, 175, 194, 0.12) !important
 }
 
-.scrollbar-primary::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
+.z-depth-1-half {
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15) !important;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15) !important
 }
 
-.scrollbar-primary::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #4285F4;
+.z-depth-2 {
+    -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important
 }
 
-.scrollbar-primary {
-    scrollbar-color: #4285F4 #F5F5F5;
+.z-depth-3 {
+    -webkit-box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important
 }
 
-.scrollbar-danger::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
+.z-depth-4 {
+    -webkit-box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21) !important;
+    box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21) !important
 }
 
-.scrollbar-danger::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
+.z-depth-5 {
+    -webkit-box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22) !important;
+    box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22) !important
 }
-
-.scrollbar-danger::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #ff3547;
-}
-
-.scrollbar-danger {
-    scrollbar-color: #ff3547 #F5F5F5;
-}
-
-.scrollbar-warning::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
-}
-
-.scrollbar-warning::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-.scrollbar-warning::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #FF8800;
-}
-
-.scrollbar-warning {
-    scrollbar-color: #FF8800 #F5F5F5;
-}
-
-.scrollbar-success::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
-}
-
-.scrollbar-success::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-.scrollbar-success::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #00C851;
-}
-
-.scrollbar-success {
-    scrollbar-color: #00C851 #F5F5F5;
-}
-
-.scrollbar-info::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
-}
-
-.scrollbar-info::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-.scrollbar-info::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #33b5e5;
-}
-
-.scrollbar-info {
-    scrollbar-color: #33b5e5 #F5F5F5;
-}
-
-.scrollbar-default::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
-}
-
-.scrollbar-default::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-.scrollbar-default::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #2BBBAD;
-}
-
-.scrollbar-default {
-    scrollbar-color: #2BBBAD #F5F5F5;
-}
-
-.scrollbar-secondary::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
-}
-
-.scrollbar-secondary::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-.scrollbar-secondary::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #aa66cc;
-}
-
-.scrollbar-secondary {
-    scrollbar-color: #aa66cc #F5F5F5;
-}
-
